--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+absl-py==1.0.0
 amqp==5.1.1
 asgiref==3.5.0
+astunparse==1.6.3
 async-timeout==4.0.2
 autopep8==1.6.0
 backports.zoneinfo==0.2.1
 backtrader==1.9.76.123
 backtrader-plotly==1.2.0
 billiard==3.6.4.0
+cachetools==5.0.0
 celery==5.2.6
 celery-progress==0.1.2
 certifi==2021.10.8
@@ -15,34 +18,77 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.4
+cycler==0.11.0
 Deprecated==1.2.13
 Django==4.0.4
 django-debug-toolbar==3.2.4
 djangorestframework==3.13.1
 djangorestframework-datatables==0.7.0
+flatbuffers==2.0
+fonttools==4.32.0
+gast==0.5.3
+google-auth==2.6.5
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.44.0
+h5py==3.6.0
 idna==3.3
+importlib-metadata==4.11.3
 jenkspy==0.2.0
+joblib==1.1.0
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
 kombu==5.2.4
+libclang==13.0.0
+lxml==4.8.0
+Markdown==3.3.6
+matplotlib==3.5.1
+mplfinance==0.12.8b9
+multitasking==0.0.10
 numpy==1.22.3
+oauthlib==3.2.0
+opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.2
+Pillow==9.1.0
 plotly==5.7.0
 prompt-toolkit==3.0.29
+protobuf==3.20.0
 psycopg2-binary==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pyparsing==3.0.8
 python-dateutil==2.8.2
 pytz==2022.1
 redis==4.2.2
 requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+scikit-learn==1.0.2
+scipy==1.8.0
 six==1.16.0
+sklearn==0.0
 sortedcontainers==2.4.0
 sqlparse==0.4.2
 tenacity==8.0.1
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.24.0
+termcolor==1.1.0
+tf-estimator-nightly==2.8.0.dev2021122109
+threadpoolctl==3.1.0
 toml==0.10.2
 tqdm==4.64.0
+typing_extensions==4.2.0
 tzdata==2022.1
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
+Werkzeug==2.1.1
 wrapt==1.14.0
+yfinance==0.1.70
+zipp==3.8.0
